force-app/main/default/objects/Krow__Baseline_Task__c/Krow__Baseline_Task__c.object-meta.xml
<CustomObject>
    <label>Baseline Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Baseline Task</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>