force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Account__c.field-meta.xml
<CustomField>
    <fullName>Krow__Account__c</fullName>
    <label>Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>