force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Act_vs_Est_Budget__c.field-meta.xml
<CustomField>
    <fullName>Krow__Act_vs_Est_Budget__c</fullName>
    <label>Act vs Est Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>