force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Assigned_By__c.field-meta.xml
<CustomField>
    <fullName>Krow__Assigned_By__c</fullName>
    <label>Assigned By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>