force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Budgeted_Cost_Task__c.field-meta.xml
<CustomField>
    <fullName>Krow__Budgeted_Cost_Task__c</fullName>
    <label>Budgeted Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>