force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Complete__c.field-meta.xml
<CustomField>
    <fullName>Krow__Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complete</label>
    <type>Checkbox</type>
</CustomField>