force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Create_Event__c.field-meta.xml
<CustomField>
    <fullName>Krow__Create_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Event</label>
    <type>Checkbox</type>
</CustomField>