force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Create_Task_In_Jira__c.field-meta.xml
<CustomField>
    <fullName>Krow__Create_Task_In_Jira__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Task In Jira</label>
    <type>Checkbox</type>
</CustomField>