force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Description__c.field-meta.xml
<CustomField>
    <fullName>Krow__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>