force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>