force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Duration__c.field-meta.xml
<CustomField>
    <fullName>Krow__Duration__c</fullName>
    <label>Duration</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>