force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Duration_Scale__c.field-meta.xml
<CustomField>
    <fullName>Krow__Duration_Scale__c</fullName>
    <label>Duration Scale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
                <default>true</default>
                <label>Day</label>
            </value>
            <value>
                <fullName>Hour</fullName>
            </value>
            <value>
                <fullName>Minute</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>