force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__End_Time__c.field-meta.xml
<CustomField>
    <fullName>Krow__End_Time__c</fullName>
    <label>End Time</label>
    <length>18</length>
    <type>Text</type>
</CustomField>