force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Est_vs_Sch_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Est_vs_Sch_Hours__c</fullName>
    <label>Est vs Sch Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>