force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Estimated_Cost_at_Completion__c.field-meta.xml
<CustomField>
    <fullName>Krow__Estimated_Cost_at_Completion__c</fullName>
    <label>Estimated Cost at Completion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>