force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Estimated_Hours__c</fullName>
    <label>Estimated Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>