force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__External_Task_ID__c.field-meta.xml
<CustomField>
    <fullName>Krow__External_Task_ID__c</fullName>
    <externalId>true</externalId>
    <label>External Task ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>