force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Hours_Remaining_Task__c.field-meta.xml
<CustomField>
    <fullName>Krow__Hours_Remaining_Task__c</fullName>
    <label>Hours Remaining (Logged)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>