force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Include_Weekends__c.field-meta.xml
<CustomField>
    <fullName>Krow__Include_Weekends__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Weekends</label>
    <type>Checkbox</type>
</CustomField>