force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Intacct_Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Intacct_Task_Id__c</fullName>
    <label>Intacct Task Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>