force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Jira_Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Jira_Task_Id__c</fullName>
    <description>Task Id of klient task created in jira</description>
    <label>Jira Task Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>