force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Krow_Task__c.field-meta.xml
<CustomField>
    <fullName>Krow__Krow_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Klient Task</label>
    <referenceTo>Krow__Task__c</referenceTo>
    <relationshipLabel>Baseline Task</relationshipLabel>
    <relationshipName>Baseline_Task</relationshipName>
    <type>Lookup</type>
</CustomField>