force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Milestone__c.field-meta.xml
<CustomField>
    <fullName>Krow__Milestone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Milestone?</label>
    <type>Checkbox</type>
</CustomField>