force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Milestone_Completion_Percent__c.field-meta.xml
<CustomField>
    <fullName>Krow__Milestone_Completion_Percent__c</fullName>
    <description>complete percent of all completed milestone task</description>
    <label>Milestone Completion %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>