force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Milestone_Payment__c.field-meta.xml
<CustomField>
    <fullName>Krow__Milestone_Payment__c</fullName>
    <label>Milestone Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>