force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Number_of_Resources__c.field-meta.xml
<CustomField>
    <fullName>Krow__Number_of_Resources__c</fullName>
    <label>Number of Resources</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>