force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Parent_Name_Track__c.field-meta.xml
<CustomField>
    <fullName>Krow__Parent_Name_Track__c</fullName>
    <label>Parent Name Track</label>
    <length>255</length>
    <type>Text</type>
</CustomField>