force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Parent_Task__c.field-meta.xml
<CustomField>
    <fullName>Krow__Parent_Task__c</fullName>
    <label>Parent Task</label>
    <length>255</length>
    <type>Text</type>
</CustomField>