force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>Krow__Percent_Complete__c</fullName>
    <label>% Complete</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>