force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Planned_Hours_Task__c.field-meta.xml
<CustomField>
    <fullName>Krow__Planned_Hours_Task__c</fullName>
    <label>Deprecated 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>