force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Predecessor__c.field-meta.xml
<CustomField>
    <fullName>Krow__Predecessor__c</fullName>
    <label>Predecessor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>