force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Project_Baseline__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Baseline__c</fullName>
    <label>Project Baseline</label>
    <referenceTo>Krow__Project_Baseline__c</referenceTo>
    <relationshipLabel>Baseline Task</relationshipLabel>
    <relationshipName>Baseline_Task</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>