force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Project_Owner__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Owner__c</fullName>
    <label>Project Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>