force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Phase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Treat this task as Project Section in gantt view.</description>
    <inlineHelpText>Treat this task as Project Section in gantt view.</inlineHelpText>
    <label>Project Phase</label>
    <type>Checkbox</type>
</CustomField>