force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Related_To__c.field-meta.xml
<CustomField>
    <fullName>Krow__Related_To__c</fullName>
    <label>Related To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>