force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Related_To_ID__c.field-meta.xml
<CustomField>
    <fullName>Krow__Related_To_ID__c</fullName>
    <label>Related To ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>