force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Related_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Krow__Related_To_Name__c</fullName>
    <label>Related To Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>