force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Role__c.field-meta.xml
<CustomField>
    <fullName>Krow__Role__c</fullName>
    <label>Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>