force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Root__c.field-meta.xml
<CustomField>
    <fullName>Krow__Root__c</fullName>
    <label>Root</label>
    <length>255</length>
    <type>Text</type>
</CustomField>