force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Schedule_All_Resource__c.field-meta.xml
<CustomField>
    <fullName>Krow__Schedule_All_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schedule All Resource</label>
    <type>Checkbox</type>
</CustomField>