force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Scheduled_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Scheduled_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Sum of all task assignment&apos;s hours.</description>
    <label>Scheduled Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>