force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Section__c.field-meta.xml
<CustomField>
    <fullName>Krow__Section__c</fullName>
    <description>This will hold section name of task which belongs to a project.</description>
    <inlineHelpText>This will hold section name of task which belongs to a project.</inlineHelpText>
    <label>Section</label>
    <length>250</length>
    <type>Text</type>
</CustomField>