force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__SFDC_TaskId__c.field-meta.xml
<CustomField>
    <fullName>Krow__SFDC_TaskId__c</fullName>
    <label>SFDC_TaskId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>