force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Split_Across_Team__c.field-meta.xml
<CustomField>
    <fullName>Krow__Split_Across_Team__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Split Across Team</label>
    <type>Checkbox</type>
</CustomField>