force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>