force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Status__c.field-meta.xml
<CustomField>
    <fullName>Krow__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Waiting on someone else</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Priority</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>