force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Sub_Tasks_Total_Logged_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Sub_Tasks_Total_Logged_Hours__c</fullName>
    <label>Sub-Tasks Total Hours (Logged)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>