force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Task_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Task_Due_Date__c</fullName>
    <label>Task Due Date</label>
    <type>DateTime</type>
</CustomField>