force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Task_Rate__c.field-meta.xml
<CustomField>
    <fullName>Krow__Task_Rate__c</fullName>
    <label>Task Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>