force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Total_Billable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Billable_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Billable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>