force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Total_Duration__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Duration__c</fullName>
    <label>Total Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>