force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Total_Hours_Billable_Logged__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Hours_Billable_Logged__c</fullName>
    <label>Total Hours Billable (Logged)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>