force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Total_Logged_Hours_Including_Sub_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Logged_Hours_Including_Sub_Tasks__c</fullName>
    <label>Total Logged Hours Including Sub-Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>