force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__TotalHours__c.field-meta.xml
<CustomField>
    <fullName>Krow__TotalHours__c</fullName>
    <label>Total Task Time Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>