force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__TotalMinutes__c.field-meta.xml
<CustomField>
    <fullName>Krow__TotalMinutes__c</fullName>
    <label>Total Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>