force-app/main/default/objects/Krow__Baseline_Task__c/fields/Krow__Variance__c.field-meta.xml
<CustomField>
    <fullName>Krow__Variance__c</fullName>
    <label>Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>